[gd_scene load_steps=25 format=3 uid="uid://bhu0frqac6027"]

[ext_resource type="Script" path="res://Scenes/CanvasLayers/AlchemyMenu/Scripts/alchemy_menu.gd" id="1_styp8"]
[ext_resource type="Texture2D" uid="uid://cq3m8hcalxuea" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/potion_alcohol.png" id="2_81twt"]
[ext_resource type="Texture2D" uid="uid://ckcll5n48rtii" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/gaunlet_leaf.png" id="3_mrovw"]
[ext_resource type="Texture2D" uid="uid://btqmln1iydfn8" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/gaunlet_ruby.png" id="4_nldiu"]
[ext_resource type="Texture2D" uid="uid://ddeyue4r5bu6i" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/water.png" id="4_q6wtq"]
[ext_resource type="Texture2D" uid="uid://ctk0bhw5ypcgx" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/vinager.png" id="5_1s5k4"]
[ext_resource type="Texture2D" uid="uid://2xtbni2sjew8" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/formula_book.png" id="5_jwtap"]
[ext_resource type="Texture2D" uid="uid://bqbhci8b1u3nn" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/not_active.png" id="5_u0qdd"]
[ext_resource type="ButtonGroup" uid="uid://c1kdnqgt7r853" path="res://Scenes/CanvasLayers/AlchemyMenu/ButtonGroups/liquids_button_group.tres" id="5_vlyqe"]
[ext_resource type="Texture2D" uid="uid://ctkaemkp80kr5" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/oil.png" id="6_i2jrm"]
[ext_resource type="Texture2D" uid="uid://bkhj64axsahpy" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/alcohol.png" id="7_w0abc"]
[ext_resource type="Texture2D" uid="uid://bpw1oupto6lid" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/bone.png" id="8_fvvlx"]
[ext_resource type="Texture2D" uid="uid://fbhlns2yyrd0" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/leaf.png" id="9_vg3bw"]
[ext_resource type="ButtonGroup" uid="uid://dcdq5tq367sow" path="res://Scenes/CanvasLayers/AlchemyMenu/ButtonGroups/material_button_group.tres" id="10_1wnwq"]
[ext_resource type="Texture2D" uid="uid://d4gsaacghot74" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/wood.png" id="10_ak5qa"]
[ext_resource type="Texture2D" uid="uid://yl0ygp6ou8fx" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/leather.png" id="11_ffky1"]
[ext_resource type="Texture2D" uid="uid://hbh4w8yqhhbk" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/ruby.png" id="12_u5jgt"]
[ext_resource type="Texture2D" uid="uid://q0slkujqcx4q" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/topaz.png" id="13_3x7qf"]
[ext_resource type="Texture2D" uid="uid://qs54lg5e5xrh" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/emerald.png" id="14_eviue"]
[ext_resource type="ButtonGroup" uid="uid://ib4l8pheokkb" path="res://Scenes/CanvasLayers/AlchemyMenu/ButtonGroups/catalyst_button_group.tres" id="15_hs0bd"]
[ext_resource type="Texture2D" uid="uid://dw7f8srjbxk7g" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/gold.png" id="15_ixkp0"]
[ext_resource type="Texture2D" uid="uid://bqwcqakpjnwau" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/shadow.png" id="16_5hytd"]
[ext_resource type="PackedScene" uid="uid://d1pamf7vuhbmg" path="res://Scenes/CanvasLayers/FormulaNotebook/formula_notebook.tscn" id="23_dkapr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bq3du"]
bg_color = Color(0.119065, 0.179129, 0.330355, 1)

[node name="AlchemyMenu" type="Control" groups=["AlchemyMenu"]]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_styp8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.460151, 0.324299, 0.17202, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GaunletContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/GaunletContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bq3du")
current_tab = 0
clip_tabs = false

[node name="Gaunlet0" type="TabBar" parent="HBoxContainer/GaunletContainer/TabContainer"]
layout_mode = 2
focus_mode = 0
metadata/_tab_index = 0

[node name="SpellContainer" type="VBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PotionRow" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet0/SpellContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Potion0" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet0/SpellContainer/PotionRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_81twt")
expand_mode = 3
stretch_mode = 4

[node name="GaunletRow" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet0/SpellContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="GaunletLeft0" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet0/SpellContainer/GaunletRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_mrovw")
expand_mode = 3

[node name="GaunletRight0" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet0/SpellContainer/GaunletRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_nldiu")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet0/SpellContainer"]
layout_mode = 2

[node name="Space2" type="Control" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet0/SpellContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AssignedSpellName0" type="Label" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet0/SpellContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Space" type="Control" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet0/SpellContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Gaunlet1" type="TabBar" parent="HBoxContainer/GaunletContainer/TabContainer"]
visible = false
layout_mode = 2
focus_mode = 0
metadata/_tab_index = 1

[node name="SpellContainer" type="VBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PotionRow" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet1/SpellContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Potion1" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet1/SpellContainer/PotionRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_81twt")
expand_mode = 3
stretch_mode = 4

[node name="GaunletRow" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet1/SpellContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="GaunletLeft1" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet1/SpellContainer/GaunletRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_mrovw")
expand_mode = 3

[node name="GaunletRight1" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet1/SpellContainer/GaunletRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_nldiu")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet1/SpellContainer"]
layout_mode = 2

[node name="Space2" type="Control" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet1/SpellContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AssignedSpellName1" type="Label" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet1/SpellContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Space" type="Control" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet1/SpellContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Gaunlet2" type="TabBar" parent="HBoxContainer/GaunletContainer/TabContainer"]
visible = false
layout_mode = 2
focus_mode = 0
metadata/_tab_index = 2

[node name="SpellContainer" type="VBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PotionRow" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet2/SpellContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Potion2" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet2/SpellContainer/PotionRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_81twt")
expand_mode = 3
stretch_mode = 4

[node name="GaunletRow" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet2/SpellContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="GaunletLeft2" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet2/SpellContainer/GaunletRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_mrovw")
expand_mode = 3

[node name="GaunletRight2" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet2/SpellContainer/GaunletRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_nldiu")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet2/SpellContainer"]
layout_mode = 2

[node name="Space2" type="Control" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet2/SpellContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AssignedSpellName2" type="Label" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet2/SpellContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Space" type="Control" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet2/SpellContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Gaunlet3" type="TabBar" parent="HBoxContainer/GaunletContainer/TabContainer"]
visible = false
layout_mode = 2
focus_mode = 0
metadata/_tab_index = 3

[node name="SpellContainer" type="VBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PotionRow" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet3/SpellContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Potion3" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet3/SpellContainer/PotionRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_81twt")
expand_mode = 3
stretch_mode = 4

[node name="GaunletRow" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet3/SpellContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="GaunletLeft3" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet3/SpellContainer/GaunletRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_mrovw")
expand_mode = 3

[node name="GaunletRight3" type="TextureRect" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet3/SpellContainer/GaunletRow"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_nldiu")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet3/SpellContainer"]
layout_mode = 2

[node name="Space2" type="Control" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet3/SpellContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AssignedSpellName3" type="Label" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet3/SpellContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Space" type="Control" parent="HBoxContainer/GaunletContainer/TabContainer/Gaunlet3/SpellContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/GaunletContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/GaunletContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClapchemyButton" type="Button" parent="HBoxContainer/GaunletContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "CLAPCHEMY!"

[node name="Control2" type="Control" parent="HBoxContainer/GaunletContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AlchemyContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/AlchemyContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/AlchemyContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/AlchemyContainer/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("5_jwtap")
stretch_mode = 5

[node name="LiquidLabel" type="Label" parent="HBoxContainer/AlchemyContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "LIQUIDS"

[node name="LiquidsContainer" type="GridContainer" parent="HBoxContainer/AlchemyContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="WaterTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/LiquidsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("5_vlyqe")
texture_normal = ExtResource("4_q6wtq")
ignore_texture_size = true
stretch_mode = 5

[node name="VinegarTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/LiquidsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("5_vlyqe")
texture_normal = ExtResource("5_1s5k4")
ignore_texture_size = true
stretch_mode = 5

[node name="OilTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/LiquidsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("5_vlyqe")
texture_normal = ExtResource("6_i2jrm")
ignore_texture_size = true
stretch_mode = 5

[node name="AlcoholTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/LiquidsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("5_vlyqe")
texture_normal = ExtResource("7_w0abc")
ignore_texture_size = true
stretch_mode = 5

[node name="WaterLabel" type="Label" parent="HBoxContainer/AlchemyContainer/LiquidsContainer"]
layout_mode = 2
text = "Water"
horizontal_alignment = 1

[node name="VinegarLabel" type="Label" parent="HBoxContainer/AlchemyContainer/LiquidsContainer"]
layout_mode = 2
text = "Vinegar"
horizontal_alignment = 1

[node name="OilLabel" type="Label" parent="HBoxContainer/AlchemyContainer/LiquidsContainer"]
layout_mode = 2
text = "Oil"
horizontal_alignment = 1

[node name="ALcoholLabel" type="Label" parent="HBoxContainer/AlchemyContainer/LiquidsContainer"]
layout_mode = 2
text = "Alcohol"
horizontal_alignment = 1

[node name="MaterialLabel" type="Label" parent="HBoxContainer/AlchemyContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "MATERIALS
"

[node name="SolidContainer" type="GridContainer" parent="HBoxContainer/AlchemyContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="BoneTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/SolidContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("10_1wnwq")
texture_normal = ExtResource("8_fvvlx")
ignore_texture_size = true
stretch_mode = 5

[node name="LeafTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/SolidContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("10_1wnwq")
texture_normal = ExtResource("9_vg3bw")
ignore_texture_size = true
stretch_mode = 5

[node name="WoodTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/SolidContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("10_1wnwq")
texture_normal = ExtResource("10_ak5qa")
ignore_texture_size = true
stretch_mode = 5

[node name="LeatherTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/SolidContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("10_1wnwq")
texture_normal = ExtResource("11_ffky1")
ignore_texture_size = true
stretch_mode = 5

[node name="BoneLabel" type="Label" parent="HBoxContainer/AlchemyContainer/SolidContainer"]
layout_mode = 2
text = "Bone"
horizontal_alignment = 1

[node name="LeafLabel" type="Label" parent="HBoxContainer/AlchemyContainer/SolidContainer"]
layout_mode = 2
text = "Leaf"
horizontal_alignment = 1

[node name="WoodLabel" type="Label" parent="HBoxContainer/AlchemyContainer/SolidContainer"]
layout_mode = 2
text = "Wood"
horizontal_alignment = 1

[node name="LeatherLabel" type="Label" parent="HBoxContainer/AlchemyContainer/SolidContainer"]
layout_mode = 2
text = "Leather"
horizontal_alignment = 1

[node name="CatalystLabel" type="Label" parent="HBoxContainer/AlchemyContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "CATALYST"

[node name="CatalystContainer" type="GridContainer" parent="HBoxContainer/AlchemyContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="RubyTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/CatalystContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("15_hs0bd")
texture_normal = ExtResource("12_u5jgt")
ignore_texture_size = true
stretch_mode = 5

[node name="TopazTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/CatalystContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("15_hs0bd")
texture_normal = ExtResource("13_3x7qf")
ignore_texture_size = true
stretch_mode = 5

[node name="EmeraldTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/CatalystContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("15_hs0bd")
texture_normal = ExtResource("14_eviue")
ignore_texture_size = true
stretch_mode = 5

[node name="GoldTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/CatalystContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("15_hs0bd")
texture_normal = ExtResource("15_ixkp0")
ignore_texture_size = true
stretch_mode = 5

[node name="ShadowTexture" type="TextureButton" parent="HBoxContainer/AlchemyContainer/CatalystContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = ExtResource("15_hs0bd")
texture_normal = ExtResource("16_5hytd")
ignore_texture_size = true
stretch_mode = 0

[node name="RubyLabel" type="Label" parent="HBoxContainer/AlchemyContainer/CatalystContainer"]
layout_mode = 2
text = "Ruby"
horizontal_alignment = 1

[node name="TopazLabel" type="Label" parent="HBoxContainer/AlchemyContainer/CatalystContainer"]
layout_mode = 2
text = "Topaz"
horizontal_alignment = 1

[node name="EmeraldLabel" type="Label" parent="HBoxContainer/AlchemyContainer/CatalystContainer"]
layout_mode = 2
text = "Emerald"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="HBoxContainer/AlchemyContainer/CatalystContainer"]
layout_mode = 2
text = "Gold"
horizontal_alignment = 1

[node name="ShadowLabel" type="Label" parent="HBoxContainer/AlchemyContainer/CatalystContainer"]
layout_mode = 2
text = "Shadow"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/AlchemyContainer"]
layout_mode = 2

[node name="FillerSpace" type="Control" parent="HBoxContainer/AlchemyContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActiveGaunletButton" type="Button" parent="HBoxContainer/AlchemyContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "SET ACTIVE GAUNLET"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/AlchemyContainer/HBoxContainer"]
layout_mode = 2

[node name="ActiveTexture" type="TextureRect" parent="HBoxContainer/AlchemyContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_u0qdd")
expand_mode = 3

[node name="ActiveLabel" type="Label" parent="HBoxContainer/AlchemyContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "NOT ACTIVE"
vertical_alignment = 1

[node name="FillerSpace2" type="Control" parent="HBoxContainer/AlchemyContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FormulaNotebookLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="FormulaNotebook" parent="FormulaNotebookLayer" instance=ExtResource("23_dkapr")]
unique_name_in_owner = true
offset_left = 343.0
offset_right = -233.0

[connection signal="tab_changed" from="HBoxContainer/GaunletContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="HBoxContainer/GaunletContainer/HBoxContainer/ClapchemyButton" to="." method="_on_clapchemy_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AlchemyContainer/HBoxContainer2/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/LiquidsContainer/WaterTexture" to="." method="_on_water_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/LiquidsContainer/VinegarTexture" to="." method="_on_vinegar_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/LiquidsContainer/OilTexture" to="." method="_on_oil_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/LiquidsContainer/AlcoholTexture" to="." method="_on_alcohol_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/SolidContainer/BoneTexture" to="." method="_on_bone_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/SolidContainer/LeafTexture" to="." method="_on_leaf_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/SolidContainer/WoodTexture" to="." method="_on_wood_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/SolidContainer/LeatherTexture" to="." method="_on_leather_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/CatalystContainer/RubyTexture" to="." method="_on_ruby_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/CatalystContainer/TopazTexture" to="." method="_on_topaz_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/CatalystContainer/EmeraldTexture" to="." method="_on_emerald_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/CatalystContainer/GoldTexture" to="." method="_on_gold_texture_toggled"]
[connection signal="toggled" from="HBoxContainer/AlchemyContainer/CatalystContainer/ShadowTexture" to="." method="_on_shadow_texture_toggled"]
[connection signal="pressed" from="HBoxContainer/AlchemyContainer/HBoxContainer/ActiveGaunletButton" to="." method="_on_active_gaunlet_button_pressed"]
